...

import Foundation
import ResearchKit

struct Onboarding {
  static let taskID = "OnboardingTaskID"
  private static let boolAnswerFormat = ORKBooleanAnswerFormat(yesString: "Yes", noString: "No")
  
  static let onboardingSurvey: OnboardingTask = {
    let consentDocument = ConsentDocument()
    let consentStep = ORKVisualConsentStep(identifier: "VisualConsentStep", document: consentDocument)
    let signature = consentDocument.signatures!.first!
    let reviewConsentStep = ORKConsentReviewStep(identifier: "ConsentReviewStep", signature: signature, in: consentDocument)
...
  }()
  
  //MARK: Eligibility Steps
  
  private static let biologicalSexStep: ORKStep = {
    let title = "Biological sex?"
    let textChoices = [ORKTextChoice(text: "Female", value: 0 as NSCoding & NSCopying & NSObjectProtocol),
                       ORKTextChoice(text: "Male", value: 1 as NSCoding & NSCopying & NSObjectProtocol),
                       ORKTextChoice(text: "None of the above", value: 2 as NSCoding & NSCopying & NSObjectProtocol)
    ]
    let answerFormat = ORKAnswerFormat.choiceAnswerFormat(with: ORKChoiceAnswerStyle.singleChoice, textChoices: textChoices)
    let biologicalSexStep = ORKQuestionStep(identifier: EligibilitySteps.biologicalSexStepID, title: title, question: "What is your biological sex?", answer: answerFormat)
    biologicalSexStep.isOptional = false
...
